--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "frontMatter.taxonomy.categories": [
-        "Android"
+        "Android",
+        "Flutter"
+    ],
+    "frontMatter.taxonomy.tags": [
+        "Flutter"
     ]
 }
