--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ enableEmoji = true
 
 [Author]
   name = "Germain SIPIERE"
-  bio = "Germain SIPIERE, formateur en conception et développement d'applications à l'AFPA. J'utilise différentes technologies et j'adore en découvrir continuelement de nouvelles"
+  bio = "Germain SIPIERE, formateur en conception et développement d'applications à l'AFPA. J'utilise différentes technologies et j'adore en découvrir continuellement de nouvelles"
   avatar = "img/moi.jpg"
 
 [Params]
